--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Tanay Wattamwar - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,15 +22,15 @@
     <!-- Home Section -->
     <section id="home">
         <div class="intro">
-            <h1>Hello, I'm [Your Name]</h1>
-            <p>Welcome to my portfolio website!</p>
+            <h1>Hello, I'm Tanay Wattamwar</h1>
+            <p>Frontend Developer</p>
         </div>
     </section>
 
     <!-- About Me Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>A brief description about yourself, your skills, and your background.</p>
+        <p>I'm a passionate frontend developer with a knack for building interactive and user-friendly web interfaces. I love coding, creating new projects, and continuously learning new technologies.</p>
     </section>
 
     <!-- Projects Section -->
@@ -38,14 +38,13 @@
         <h2>My Projects</h2>
         <div class="project-grid">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of project 1.</p>
+                <h3>Hotel Menu Card</h3>
+                <p>A dynamic web-based menu card for a hotel, allowing customers to view the available dishes, filter by categories, and see detailed descriptions, ingredients, and prices. This project is built using HTML, CSS, and JavaScript for seamless user experience.</p>
             </div>
             <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of project 2.</p>
+                <h3>Hotel Billing System</h3>
+                <p>An interactive billing system for hotels that calculates the total cost of a customer's order, applies discounts, and generates an itemized bill. The system is designed with a focus on simplicity and usability using HTML, CSS, and JavaScript.</p>
             </div>
-            <!-- Add more projects as needed -->
         </div>
     </section>
 
@@ -62,7 +61,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Tanay Wattamwar. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript File -->
