--- a/index.html
+++ b/index.html
@@ -19,11 +19,19 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
+    <!-- Home Section with Image -->
     <section id="home">
         <div class="intro">
-            <h1>Hello, I'm Tanay Wattamwar</h1>
-            <p>Frontend Developer</p>
+            <div class="home-content">
+                <div class="home-text">
+                    <h1>Hello, I'm Tanay Wattamwar</h1>
+                    <p>Frontend Developer</p>
+                </div>
+                <div class="home-image">
+                    <!-- Replace 'profile.jpg' with your actual image file name -->
+                    <img src="profile.jpg" alt="Tanay Wattamwar" />
+                </div>
+            </div>
         </div>
     </section>
 
@@ -59,12 +67,3 @@
         </form>
     </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2024 Tanay Wattamwar. All rights reserved.</p>
-    </footer>
-
-    <!-- JavaScript File -->
-    <script src="scripts.js"></script>
-</body>
-</html>
