--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="home-image">
                     <!-- Replace 'profile.jpg' with your actual image file name -->
-                    <img src="profile.jpg" alt="Tanay Wattamwar" />
+                    <img src="tanay.jpg" alt="Tanay Wattamwar" />
                 </div>
             </div>
         </div>
