--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>Frontend Developer</p>
                 </div>
                 <div class="home-image">
-                    <!-- Replace 'profile.jpg' with your actual image file name -->
+                    <!-- Replace 'tanay.jpg' with your actual image file name -->
                     <img src="tanay.jpg" alt="Tanay Wattamwar" />
                 </div>
             </div>
