--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         </nav>
     </header>
 
-    <!-- Home Section with Image -->
+    <!-- Home Section -->
     <section id="home">
         <div class="intro">
-            <div class="home-content">
-                <div class="home-text">
-                    <h1>Hello, I'm Tanay Wattamwar</h1>
-                    <p>Frontend Developer</p>
-                </div>
-                <div class="home-image">
-                    <!-- Replace 'tanay.jpg' with your actual image file name -->
-                    <img src="tanay.jpg" alt="Tanay Wattamwar" />
-                </div>
-            </div>
+            <h1>Hello, I'm Tanay Wattamwar</h1>
+            <p>Frontend Developer</p>
+        </div>
+    </section>
+
+    <!-- Small Photo Section -->
+    <section id="photo">
+        <div class="photo-container">
+            <!-- Replace 'profile.jpg' with your actual image file name -->
+            <img src="profile.jpg" alt="Tanay Wattamwar" />
         </div>
     </section>
 
@@ -67,3 +67,12 @@
         </form>
     </section>
 
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Tanay Wattamwar. All rights reserved.</p>
+    </footer>
+
+    <!-- JavaScript File -->
+    <script src="scripts.js"></script>
+</body>
+</html>
