--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Small Photo Section -->
     <section id="photo">
         <div class="photo-container">
-            <!-- Replace 'profile.jpg' with your actual image file name -->
-            <img src="profile.jpg" alt="Tanay Wattamwar" />
+            <!-- Replace 'tanay.jpg' with your actual image file name -->
+            <img src="tanay.jpg" alt="Tanay Wattamwar" />
         </div>
     </section>
 
